force-app/main/default/objects/Contract_Discount__c/fields/all_BU__c.field-meta.xml
<CustomField>
    <fullName>all_BU__c</fullName>
    <defaultValue>true</defaultValue>
    <label>all BU</label>
    <type>Checkbox</type>
</CustomField>