force-app/main/default/objects/Contract_Discount__c/fields/all_items__c.field-meta.xml
<CustomField>
    <fullName>all_items__c</fullName>
    <defaultValue>true</defaultValue>
    <label>all items</label>
    <type>Checkbox</type>
</CustomField>