force-app/main/default/objects/Contract_Discount__c/fields/Already_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Already_Invoiced__c</fullName>
    <description>The already invoiced of transactions</description>
    <label>Already Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>