force-app/main/default/objects/Contract_Discount__c/fields/Balance_Base__c.field-meta.xml
<CustomField>
    <fullName>Balance_Base__c</fullName>
    <description>Calculation model used for Balance Invoicing</description>
    <label>Balance Base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Database_origin</valueSetName>
    </valueSet>
</CustomField>