force-app/main/default/objects/Contract_Discount__c/fields/Balancing_Invoices_List__c.field-meta.xml
<CustomField>
    <fullName>Balancing_Invoices_List__c</fullName>
    <description>Contient Liste des invoices liées à la condition ayant un invoice number not blank.
Invoice_number &quot; du &quot; invoice_date</description>
    <label>Balancing Invoices List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>