force-app/main/default/objects/Contract_Discount__c/fields/Base_Quantity_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Base_Quantity_Dispatch__c</fullName>
    <label>Base Quantity Dispatch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>