force-app/main/default/objects/Contract_Discount__c/fields/Base_Quantity_Nego_1__c.field-meta.xml
<CustomField>
    <fullName>Base_Quantity_Nego_1__c</fullName>
    <label>Base Quantity Nego-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>