force-app/main/default/objects/Contract_Discount__c/fields/Base_SellOut_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Base_SellOut_Dispatch__c</fullName>
    <label>Base Sell Out Dispatch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>