force-app/main/default/objects/Contract_Discount__c/fields/Base_SellOut_Nego_1__c.field-meta.xml
<CustomField>
    <fullName>Base_SellOut_Nego_1__c</fullName>
    <label>Base Sell Out Nego-1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>