force-app/main/default/objects/Contract_Discount__c/fields/Base_TO_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Base_TO_Dispatch__c</fullName>
    <description>Purchases dispatch base for condition BU dispatch in percent based on the Nego Scope, BU and date filter. 
The field is automatically felt by trigger.</description>
    <inlineHelpText>Purchases dispatch base for condition BU dispatch in percent based on the Nego Scope, BU and date filter. 
The field is automatically felt by trigger.</inlineHelpText>
    <label>Base TO Dispatch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>