force-app/main/default/objects/Contract_Discount__c/fields/Base_TO_Nego__c.field-meta.xml
<CustomField>
    <fullName>Base_TO_Nego__c</fullName>
    <description>Negotiated based TO for the condition line (should be equal to Contract TO if condition scope = contract scope)</description>
    <inlineHelpText>Negotiated based TO for the condition line (should be equal to Contract TO if condition scope = contract scope)</inlineHelpText>
    <label>Base TO Nego</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>