force-app/main/default/objects/Contract_Discount__c/fields/Base_TO_Nego_YearBase__c.field-meta.xml
<CustomField>
    <fullName>Base_TO_Nego_YearBase__c</fullName>
    <label>Base TO Nego YearBase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>