force-app/main/default/objects/Contract_Discount__c/fields/BU_Commercial_Name__c.field-meta.xml
<CustomField>
    <fullName>BU_Commercial_Name__c</fullName>
    <label>BU Commercial Name</label>
    <type>TextArea</type>
</CustomField>