force-app/main/default/objects/Contract_Discount__c/fields/BU_Scope__c.field-meta.xml
<CustomField>
    <fullName>BU_Scope__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BU Scope</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Signed, To Be Signed, With Counterparty, Without Counterparty</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Set_Contract_Discount_Main_Term__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Term To Be Signed, Sub Term Signed, Discount Detail</value>
        </filterItems>
        <filterItems>
            <field>Orga_BU__c.Set_Contract_Discount_Sub_Term__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Orga_BU__c</referenceTo>
    <relationshipLabel>Lignes contrats</relationshipLabel>
    <relationshipName>Contract_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>