force-app/main/default/objects/Contract_Discount__c/fields/commercial_reference__c.field-meta.xml
<CustomField>
    <fullName>commercial_reference__c</fullName>
    <label>Commercial reference</label>
    <type>TextArea</type>
</CustomField>