force-app/main/default/objects/Contract_Discount__c/fields/Contract_BU_id__c.field-meta.xml
<CustomField>
    <fullName>Contract_BU_id__c</fullName>
    <formula>Contract__r.Contract_BU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract BU id</label>
    <type>Text</type>
</CustomField>