force-app/main/default/objects/Contract_Discount__c/fields/Contract_NS_id__c.field-meta.xml
<CustomField>
    <fullName>Contract_NS_id__c</fullName>
    <formula>Contract__r.Supplier_Nego_Scope__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract NS id</label>
    <type>Text</type>
</CustomField>