force-app/main/default/objects/Contract_Discount__c/fields/Deletion_Action_Executed__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Action_Executed__c</fullName>
    <label>Deletion Action Executed</label>
    <type>TextArea</type>
</CustomField>