force-app/main/default/objects/Contract_Discount__c/fields/Disc_BDate__c.field-meta.xml
<CustomField>
    <fullName>Disc_BDate__c</fullName>
    <defaultValue>Date(YEAR(Today()),1,1)</defaultValue>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>