force-app/main/default/objects/Contract_Discount__c/fields/Disc_BDate_Y1__c.field-meta.xml
<CustomField>
    <fullName>Disc_BDate_Y1__c</fullName>
    <label>Begin Date Y1</label>
    <type>Date</type>
</CustomField>