force-app/main/default/objects/Contract_Discount__c/fields/Disc_EDate_Y3__c.field-meta.xml
<CustomField>
    <fullName>Disc_EDate_Y3__c</fullName>
    <label>End Date Y3</label>
    <type>Date</type>
</CustomField>