force-app/main/default/objects/Contract_Discount__c/fields/Discount_Terms__c.field-meta.xml
<CustomField>
    <fullName>Discount_Terms__c</fullName>
    <description>Mapp legal definition from Condition library (Pol_Com_Condition) at date of row generation and allow user to update it</description>
    <label>Discount Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>