force-app/main/default/objects/Contract_Discount__c/fields/Discount_Terms_Origin__c.field-meta.xml
<CustomField>
    <fullName>Discount_Terms_Origin__c</fullName>
    <description>Mapp legal definition from Condition library (Pol_Com_Condition) at date of row generation (keep origin sentance todate)</description>
    <label>Discount Terms Origin</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>