force-app/main/default/objects/Contract_Discount__c/fields/Exclusion_to_Nego_Base_Value__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_to_Nego_Base_Value__c</fullName>
    <description>User will capture here value of the exclusion. Could be total value of the fix amount or part of this value</description>
    <label>Exclusion to Nego Base Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>