force-app/main/default/objects/Contract_Discount__c/fields/Extraction_id_last__c.field-meta.xml
<CustomField>
    <fullName>Extraction_id_last__c</fullName>
    <description>Give the last extraction id for external diffusion</description>
    <inlineHelpText>Give the last extraction id for external diffusion</inlineHelpText>
    <label>Last Extraction id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>