force-app/main/default/objects/Contract_Discount__c/fields/financial_reference__c.field-meta.xml
<CustomField>
    <fullName>financial_reference__c</fullName>
    <label>Financial reference</label>
    <type>TextArea</type>
</CustomField>