force-app/main/default/objects/Contract_Discount__c/fields/first_invoice_date__c.field-meta.xml
<CustomField>
    <fullName>first_invoice_date__c</fullName>
    <label>Invoice First date</label>
    <type>Date</type>
</CustomField>