force-app/main/default/objects/Contract_Discount__c/fields/Fist_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Fist_Provision_Date__c</fullName>
    <label>Provision First date</label>
    <type>Date</type>
</CustomField>