force-app/main/default/objects/Contract_Discount__c/fields/FlatPrice_Rate_Promo_Correction__c.field-meta.xml
<CustomField>
    <fullName>FlatPrice_Rate_Promo_Correction__c</fullName>
    <formula>IF ( NOT(Is_Tariff_Condition__c) &amp;&amp; NOT(Is_FlatPrice_Condition__c) &amp;&amp; (Index__c = &apos;Index2&apos;)
, - YTD_Nego__c / Contract__r.Total_TO__c ,

IF ( NOT(Is_Tariff_Condition__c) &amp;&amp; Is_FlatPrice_Condition__c &amp;&amp; (Index__c = &apos;Index1&apos;)
, Index_perc__c * (1-Contract__r.Index2_perc__c-Contract__r.Index3_perc__c - Contract__r.Index4_perc__c) ,

IF ( Contract__r.Supplier_Nego_Scope__r.Is_Managing_FlatPrice_Rate_Promo__c &amp;&amp; NOT(Is_Tariff_Condition__c) &amp;&amp; Is_FlatPrice_Condition__c &amp;&amp; OR(Index__c = &apos;Index3&apos;,Index__c = &apos;Index4&apos;,Index__c = &apos;Index5&apos;,Index__c = &apos;Index6&apos;,Index__c = &apos;Index7&apos;)
, YTD_Nego__c / Contract__r.Total_TO__c ,

NULL

)))</formula>
    <label>FlatPrice Rate Promo Correction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>