force-app/main/default/objects/Contract_Discount__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <formula>text(Condition_Type__r.Index__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index</label>
    <type>Text</type>
</CustomField>