force-app/main/default/objects/Contract_Discount__c/fields/Index_perc__c.field-meta.xml
<CustomField>
    <fullName>Index_perc__c</fullName>
    <description>Index waterfall percentage due to the row</description>
    <inlineHelpText>Index waterfall percentage due to the row</inlineHelpText>
    <label>Index perc</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>