force-app/main/default/objects/Contract_Discount__c/fields/Index_val__c.field-meta.xml
<CustomField>
    <fullName>Index_val__c</fullName>
    <description>Index waterfall value following the row</description>
    <inlineHelpText>Index waterfall value following the row</inlineHelpText>
    <label>Index val</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>