force-app/main/default/objects/Contract_Discount__c/fields/Integration_Date_Last__c.field-meta.xml
<CustomField>
    <fullName>Integration_Date_Last__c</fullName>
    <label>Last Integration Date</label>
    <type>DateTime</type>
</CustomField>