force-app/main/default/objects/Contract_Discount__c/fields/Invoice_base__c.field-meta.xml
<CustomField>
    <fullName>Invoice_base__c</fullName>
    <description>What is the reference database used for the calculation?</description>
    <inlineHelpText>What is the reference database used for the calculation?</inlineHelpText>
    <label>Invoice base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Database_origin</valueSetName>
    </valueSet>
</CustomField>