force-app/main/default/objects/Contract_Discount__c/fields/Invoice_Planning_Short_Summary__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Planning_Short_Summary__c</fullName>
    <label>Invoice Planning Short Summary</label>
    <type>TextArea</type>
</CustomField>