force-app/main/default/objects/Contract_Discount__c/fields/Invoice_sequence__c.field-meta.xml
<CustomField>
    <fullName>Invoice_sequence__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Invoice sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>