force-app/main/default/objects/Contract_Discount__c/fields/Is_AggregatedFromMove__c.field-meta.xml
<CustomField>
    <fullName>Is_AggregatedFromMove__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aggregated From Move</label>
    <type>Checkbox</type>
</CustomField>