force-app/main/default/objects/Contract_Discount__c/fields/Is_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Is_Conditional__c</fullName>
    <description>Attribute to know if condition is conditional.
(used for example in slab)</description>
    <formula>Condition_Type__r.Is_Conditional__c == true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Conditional</label>
    <type>Checkbox</type>
</CustomField>