force-app/main/default/objects/Contract_Discount__c/fields/is_duplicable__c.field-meta.xml
<CustomField>
    <fullName>is_duplicable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If yes, the discount will be considered by default during contract duplication</description>
    <inlineHelpText>Si sélectionné la condition sera dupliquée pendant la duplication du contrat</inlineHelpText>
    <label>Is Duplicable</label>
    <type>Checkbox</type>
</CustomField>