force-app/main/default/objects/Contract_Discount__c/fields/Is_Edited__c.field-meta.xml
<CustomField>
    <fullName>Is_Edited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Edited</label>
    <type>Checkbox</type>
</CustomField>