force-app/main/default/objects/Contract_Discount__c/fields/Is_Excluded_To_Nego_Base_F__c.field-meta.xml
<CustomField>
    <fullName>Is_Excluded_To_Nego_Base_F__c</fullName>
    <defaultValue>false</defaultValue>
    <description>exclusion for fix amoun contract row</description>
    <label>Is Excluded to Nego Base F</label>
    <type>Checkbox</type>
</CustomField>