force-app/main/default/objects/Contract_Discount__c/fields/Is_Excluded_To_Nego_Base_U__c.field-meta.xml
<CustomField>
    <fullName>Is_Excluded_To_Nego_Base_U__c</fullName>
    <defaultValue>false</defaultValue>
    <description>exclusion for unit amount contract row</description>
    <label>Is Excluded to Nego Base U</label>
    <type>Checkbox</type>
</CustomField>