force-app/main/default/objects/Contract_Discount__c/fields/Is_NonDiscountable__c.field-meta.xml
<CustomField>
    <fullName>Is_NonDiscountable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>La remise est exclue de la Base de calcul  des conditions hors factures (Base Ristournable)</description>
    <inlineHelpText>La remise est exclue de la Base de calcul  des conditions hors factures (Base Ristournable)</inlineHelpText>
    <label>Is Non Discountable</label>
    <type>Checkbox</type>
</CustomField>