force-app/main/default/objects/Contract_Discount__c/fields/Is_TargetToMove__c.field-meta.xml
<CustomField>
    <fullName>Is_TargetToMove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The row will be available to move to another contract record type</description>
    <inlineHelpText>The row will be available to move to another contract record type</inlineHelpText>
    <label>Is Target To Move</label>
    <type>Checkbox</type>
</CustomField>